fix issue with scrolling/dragging on mobile devices

--- a/extensions/interactions/ItemSelectionInput/static/item_selection_input.css
+++ b/extensions/interactions/ItemSelectionInput/static/item_selection_input.css
@@ -62,12 +62,7 @@ md-checkbox.item-selection-input-checkbox .md-label {
   display: table-cell;
 }
 
-.multiple-choice-option:hover {
-  color: #115FD4;
-}
-
-.multiple-choice-option:hover .multiple-choice-inner-radio-button,
-.multiple-choice-option:focus .multiple-choice-inner-radio-button {
+.multiple-choice-option.selected .multiple-choice-inner-radio-button {
   background-color: #115FD4;
   border-radius: 50%;
   display: block;
@@ -76,16 +71,26 @@ md-checkbox.item-selection-input-checkbox .md-label {
   width: 8px;
 }
 
-.multiple-choice-option:hover .multiple-choice-outer-adio-button {
+.multiple-choice-option:focus .multiple-choice-outer-radio-button {
   border-color: #115FD4;
 }
 
-.multiple-choice-outer-radio-button {
-  border: 2px solid #0D48A1;
-  border-radius: 50%;
-  display: inline-block;
-  height: 16px;
-  margin-bottom: -1px;
-  margin-right: 12px;
-  width: 16px;
+/* Hover pseudo-class should be used in desktops only. */
+@media screen and (min-width: 800px) {
+  .multiple-choice-option:hover {
+    color: #115FD4;
+  }
+
+  .multiple-choice-option:hover .multiple-choice-inner-radio-button {
+    background-color: #115FD4;
+    border-radius: 50%;
+    display: block;
+    height: 8px;
+    margin: 2px;
+    width: 8px;
+  }
+
+  .multiple-choice-option:hover .multiple-choice-outer-radio-button {
+    border-color: #115FD4;
+  }
 }
